--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -52,6 +52,7 @@
                   <select id="validClass" class="form-select">
                     <option value="ripe" selected>ripe</option>
                     <option value="valid">valid</option>
+                    <option value="ripen">valid</option>
                     <option value="mango">mango</option>
                     <option value="pineapple">pineapple</option>
                   </select>
