--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -50,9 +50,8 @@
                   <label class="form-label mb-1">Clase válida</label>
                   <!-- Ajusta las opciones según tus clases reales -->
                   <select id="validClass" class="form-select">
-                    <option value="ripe" selected>ripe</option>
-                    <option value="valid">valid</option>
-                    <option value="ripen">valid</option>
+                    <option value="ripen" selected>ripe</option>
+                    <option value="unripen">valid</option>
                     <option value="mango">mango</option>
                     <option value="pineapple">pineapple</option>
                   </select>
